# aumos-fairness-suite

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_fairness_suite/: __init__.py  main.py  settings.py
src/aumos_fairness_suite/adapters/: __init__.py  causal_fairness.py  fairness_dashboard.py  fairness_report_generator.py  intersectional_analyzer.py  kafka.py  remediation_advisor.py  repositories.py  synthetic_bias_detector.py
src/aumos_fairness_suite/adapters/detection/: __init__.py  aif360_detector.py  fairlearn_detector.py
src/aumos_fairness_suite/adapters/mitigation/: __init__.py  in_processing.py  lfr_adapter.py  post_processing.py  pre_processing.py
src/aumos_fairness_suite/api/: __init__.py  router.py  schemas.py
src/aumos_fairness_suite/core/: __init__.py  interfaces.py  models.py  services.py
tests/: __init__.py  conftest.py  test_api.py  test_repositories.py  test_services.py
